--- a/app.json
+++ b/app.json
@@ -25,7 +25,12 @@
   "contributors": {
     "developers": [
       {
-        "name": "Kyle Secord"
+        "name": "Niels de Klerk",
+        "email": "mail@nielsdeklerk.nl"
+      },
+      {
+        "name": "Kyle Secord",
+        "email": "info@dreamscreentv.com"
       }
     ]
   },
